# sqlite-migrator

./: Cargo.toml
scripts/: make-release.sh
src/: cli.rs  main.rs  migrate.rs
