[package]
name = "sqlite-migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1"
jgtbrs = { "git" = "https://github.com/fivebillionmph/jgtbrs" }
regex = "1.6.0"
